Replace Map.of in serializer test